# boost-python-wrapping

./: CMakeLists.txt  README.md
include/: AddOperation.hpp  Apply.hpp
python/: run.py
source/: AddOperation.cpp  Apply.cpp
wrap/: wrapper.cpp
